--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <input type="text" placeholder="Title" id="title" minlength=3><br><br>
                     <input type="text" placeholder="Author" id="author" minlength=3>
                     <br><br>
-                    <button type="submit">Add</button>
+                    <button type="button" id="add-btn">Add</button>
                 </form>
             </section>
         </main>
